<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">blp</string>
    <string name="action_settings">Settings</string>
    <string name="action_results">Results</string>
    <string name="action_instructions">Instructions</string>
    <string name="timer">Time:  00:00.0</string>
    <string name="distance">Distance: 0000 m</string>
    <string name="stage">Stage</string>
    <string name="level">0.0</string>
    <string name="startText">Start</string>
    <string name="resetText">Reset</string>
    <string name="saveText">Save</string>
    <string name="savedText">Saved!</string>
    <string name="pauseText">Pause</string>
    <string name="stopText">Stop</string>
    <string name="allStopText">All Stop</string>
    <string name="adduserText">Add user</string>
    <string name="removeuserText">Remove</string>
    <string name="newuserText">New user\'s name</string>
    <string name="fulluserText">Users full!</string>
    <string name="title_activity_display_results">Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="dateHeader">Date</string>
    <string name="nameHeader">Name</string>
    <string name="levelHeader">Level</string>
    <string name="timeHeader">Time</string>
    <string name="vo2Header">VO2</string>
    <string name="sortInstructions">SORT by clicking a column header.</string>    
    <string name="graphInstructions">GRAPH VO2 use by clicking a user\'s name.</string>
    <string name="deleteInstructions">DELETE a record by long-clicking a row.</string>
    <string name="deleteAllInstructions">DELETE all records from the "Settings" page.</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_display_graphs">User Graph</string>
    <string name="title_activity_display_instructions">Instructions</string>

</resources>
