<?xml version="1.0" encoding="utf-8"?>  
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"          
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent">  
        <LinearLayout  
            android:orientation="vertical"  
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"  
            android:id="@+id/linearLayout">  

            <LinearLayout
                android:id="@+id/timerBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/timerbackground"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/stage"
                    style="@style/ButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/stage"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/level"
                    style="@style/ButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/level"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="106dp"
                    android:layout_weight="0.38"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/timer"
                        style="@style/ButtonText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/timer"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/distance"
                        style="@style/ButtonText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/distance"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout  
                android:orientation="horizontal"  
                android:layout_gravity="center_horizontal"  
                android:gravity="center"  
                android:layout_width="wrap_content"  
                android:layout_height="270dp"  
                android:layout_marginTop="5dp" >
                <ListView
                    android:id="@android:id/list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawSelectorOnTop="false" >
                </ListView>
            </LinearLayout>
            <LinearLayout  
                android:orientation="horizontal"  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:layout_gravity="center_horizontal">  
                <ImageView
                    android:contentDescription="@null"
                    android:src="@drawable/hline"  
                    android:layout_height="wrap_content"  
                    android:layout_gravity="center"  
                    android:layout_marginTop="5dp"  
                    android:layout_marginBottom="10dp"  
                    android:layout_width="wrap_content" />
            </LinearLayout>
            <LinearLayout  
                android:orientation="horizontal"  
                android:gravity="center"
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content">
                <EditText 
                    android:id="@+id/newuserName"                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:hint="@string/newuserText" />                
                <Button 
                    android:text="@string/adduserText" 
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/magentabutton" 
                    android:id="@+id/adduserButton"
                    android:onClick="addUserClick"
                    style="@style/ButtonText" />   
                <Button
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"                    
                    android:layout_height="wrap_content"
                    android:background="@drawable/magentabutton" 
                    android:text="@string/allStopText"
                    android:id="@+id/stopButton"
                    style="@style/ButtonText"                       
                    android:onClick="stopClick"
                    android:visibility="gone" />
                <Button
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    
                    android:background="@drawable/magentabutton"
                    style="@style/ButtonText"                       
                    android:text="@string/resetText"
                    android:id="@+id/resetButton"
                    android:onClick="resetClick"                    
                    android:visibility="gone" />
                <Button
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/greenbutton"
                    style="@style/ButtonText"   
                    android:text="@string/startText"
                    android:id="@+id/startButton"
                    android:onClick="startClick"/>  
            </LinearLayout>    
        </LinearLayout>  
    </RelativeLayout> 